ranked_players complete

--- a/notebooks/data_collection.ipynb
+++ b/notebooks/data_collection.ipynb
@@ -27,6 +27,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2e29e9c5",
+   "metadata": {},
+   "source": [
+    "## Accessing a player by rank"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "fab4e57b",
@@ -36,48 +44,36 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: Ignoring invalid distribution -qlparse (c:\\users\\zaeld\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages)\n",
-      "ERROR: Could not open requirements file: [Errno 2] No such file or directory: 'requirements.txt'\n",
-      "WARNING: Ignoring invalid distribution -qlparse (c:\\users\\zaeld\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -qlparse (c:\\users\\zaeld\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages)\n",
-      "WARNING: Ignoring invalid distribution -qlparse (c:\\users\\zaeld\\appdata\\local\\packages\\pythonsoftwarefoundation.python.3.10_qbz5n2kfra8p0\\localcache\\local-packages\\python310\\site-packages)\n",
-      "\n",
-      "[notice] A new release of pip is available: 23.0.1 -> 25.0.1\n",
-      "[notice] To update, run: C:\\Users\\zaeld\\AppData\\Local\\Microsoft\\WindowsApps\\PythonSoftwareFoundation.Python.3.10_qbz5n2kfra8p0\\python.exe -m pip install --upgrade pip\n"
-     ]
-    },
-    {
-     "ename": "ModuleNotFoundError",
-     "evalue": "No module named 'requests'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[4], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m get_ipython()\u001b[38;5;241m.\u001b[39mrun_line_magic(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mpip\u001b[39m\u001b[38;5;124m'\u001b[39m, \u001b[38;5;124m'\u001b[39m\u001b[38;5;124minstall requests -r requirements.txt\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mrequests\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;28;01mimport\u001b[39;00m request\n\u001b[0;32m      5\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mjson\u001b[39;00m\n\u001b[0;32m      6\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01mos\u001b[39;00m\n",
-      "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'requests'"
+      "Status code :200\n",
+      "Total entries: 205\n",
+      "First entry: {\n",
+      "    \"leagueId\": \"03fd6a29-e7d2-4075-96c6-123883759094\",\n",
+      "    \"queueType\": \"RANKED_SOLO_5x5\",\n",
+      "    \"tier\": \"SILVER\",\n",
+      "    \"rank\": \"II\",\n",
+      "    \"summonerId\": \"0uAIbD4U42x-9EmE4EB0pYmZK7aTxZ43dlf81m05Xstj4KLD\",\n",
+      "    \"puuid\": \"iE-VLPKxBxIALe5-17JYEvjOcPN_3UrAsMkLKcPugoNgW_utyd7J03fUn-l5e1c3hUFECqzUV4-VfA\",\n",
+      "    \"leaguePoints\": 51,\n",
+      "    \"wins\": 4,\n",
+      "    \"losses\": 1,\n",
+      "    \"veteran\": false,\n",
+      "    \"inactive\": false,\n",
+      "    \"freshBlood\": false,\n",
+      "    \"hotStreak\": false\n",
+      "}\n"
      ]
     }
    ],
    "source": [
-    "%pip install requests -r requirements.txt\n",
     "from requests import request\n",
-    "\n",
-    "\n",
     "import json\n",
     "import os\n",
     "\n",
     "API_KEY = os.getenv(\"RIOT_API_KEY\")\n",
     "QUEUE = \"RANKED_SOLO_5x5\"\n",
     "REGION = \"euw1\"\n",
-    "TIER = \"EMERALD\"                    # BRONZE, SILVER, GOLD, PLATINUM, DIAMOND, EMERALD, MASTER, GRANDMASTER, CHALLENGER\n",
-    "DIVISION = \"I\"                      # I, II, III, IV\n",
+    "TIER = \"SILVER\"                    # BRONZE, SILVER, GOLD, PLATINUM, DIAMOND, EMERALD, MASTER, GRANDMASTER, CHALLENGER\n",
+    "DIVISION = \"II\"                      # I, II, III, IV\n",
     "PAGE = \"1\"\n",
     "\n",
     "\n",
@@ -90,20 +86,271 @@
     "    },\n",
     ") \n",
     "\n",
-    "print(response.status_code)\n",
+    "print(f\"Status code :{response.status_code}\")\n",
     "if response.status_code == 200:\n",
     "    data = response.json()\n",
-    "    print(json.dumps(data, indent=4))\n",
+    "    print(f\"Total entries: {len(data)}\")\n",
+    "    print(f\"First entry: {json.dumps(data[0], indent=4)}\")\n",
     "else:\n",
     "    print(f\"Error: {response.status_code}\")\n",
     "    print(response.text)\n",
     "    # Handle the error as needed"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fa79ea50",
+   "metadata": {},
+   "source": [
+    "## Starting the data collection\n",
+    "\n",
+    "I want to base my analysis on active players (50+ games) below Master tier. I will start by collecting the IDs of Diamond players, then work my way down through the ranks to Bronze. My reasoning is that higher-elo players are more likely to have played a larger number of games, which will help me gather my initial insights more quickly while continuing to collect data."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "dd59cf6b",
+   "metadata": {},
+   "source": [
+    "### Creating the ranked_players DB\n",
+    "\n",
+    "Here we are collecting the rank data of each player from diamond to bronze"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3b526c3c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Last entry in the database: [\n",
+      "    \"8a7e1ee7-df8d-43bb-a33e-22e90e537c81\",\n",
+      "    \"RANKED_SOLO_5x5\",\n",
+      "    \"PLATINUM\",\n",
+      "    \"IV\",\n",
+      "    \"8V_lGPPNyb0dvcbetWldSf9pXpljEAMZ4DzffRq695HfSgl-9LUTVyCl7Q\",\n",
+      "    \"ddqvWjgKrKuPOmGeLJsNGUA7PSAvxUDpVF9kVPqHkmXSpqcWpG_DcI5dl4djY6Jh_Zbcv8Gbnv7xxg\",\n",
+      "    47,\n",
+      "    59,\n",
+      "    58,\n",
+      "    \"0\",\n",
+      "    \"0\",\n",
+      "    \"0\",\n",
+      "    \"0\"\n",
+      "]\n",
+      "Fetching data starting from tier : PLATINUM and division : IV...\n",
+      "Last entry page: 239\n",
+      "Fetching data for PLATINUM...\n",
+      "Fetching data for PLATINUM IV...\n",
+      "All data for PLATINUM IV fetched and stored in the database.\n",
+      "Fetching data for GOLD...\n",
+      "Fetching data for GOLD I...\n",
+      "All data for GOLD I fetched and stored in the database.\n",
+      "Fetching data for GOLD II...\n",
+      "All data for GOLD II fetched and stored in the database.\n",
+      "Fetching data for GOLD III...\n",
+      "All data for GOLD III fetched and stored in the database.\n",
+      "Fetching data for GOLD IV...\n",
+      "All data for GOLD IV fetched and stored in the database.\n",
+      "Fetching data for SILVER...\n",
+      "Fetching data for SILVER I...\n",
+      "All data for SILVER I fetched and stored in the database.\n",
+      "Fetching data for SILVER II...\n",
+      "All data for SILVER II fetched and stored in the database.\n",
+      "Fetching data for SILVER III...\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlite3 import connect\n",
+    "from time import sleep, time\n",
+    "from requests import request\n",
+    "import json\n",
+    "import os\n",
+    "\n",
+    "# This is an exmple of the api response we want to store in the database we will create a table based on this response\n",
+    "# Example response from the API\n",
+    "\n",
+    "response_example = {\n",
+    "    \"leagueId\": \"9d07f3b6-3331-49a3-b9ab-1f35f34273cf\",\n",
+    "    \"queueType\": \"RANKED_SOLO_5x5\",\n",
+    "    \"tier\": \"EMERALD\",\n",
+    "    \"rank\": \"I\",\n",
+    "    \"summonerId\": \"AnsLv6D7MGZrLZ_GrNPJBPaKZugw30KMPomE9Go3-cMK9P4a\",\n",
+    "    \"puuid\": \"ZrwXnHvkdDuUA3oKEgnte9tGWgAcr9MJvv1tX_50VgDGf7FXT0vEcCh51pD5_dtdOxvjwU0HZr2tjA\",\n",
+    "    \"leaguePoints\": 7,\n",
+    "    \"wins\": 17,\n",
+    "    \"losses\": 12,\n",
+    "    \"veteran\": \"false\",\n",
+    "    \"inactive\": \"false\",\n",
+    "    \"freshBlood\": \"false\",\n",
+    "    \"hotStreak\": \"false\"\n",
+    "},\n",
+    "\n",
+    "def create_table(db_name):\n",
+    "    conn = connect(db_name)\n",
+    "    cursor = conn.cursor()\n",
+    "    cursor.execute(\"\"\"\n",
+    "        CREATE TABLE IF NOT EXISTS ranked_players (\n",
+    "            league_id TEXT,\n",
+    "            queue_type TEXT,\n",
+    "            tier TEXT,\n",
+    "            rank TEXT,\n",
+    "            summoner_id TEXT PRIMARY KEY,\n",
+    "            puuid TEXT,\n",
+    "            league_points INTEGER,\n",
+    "            wins INTEGER,\n",
+    "            losses INTEGER,\n",
+    "            veteran TEXT,\n",
+    "            inactive TEXT,\n",
+    "            fresh_blood TEXT,\n",
+    "            hot_streak TEXT\n",
+    "        )\n",
+    "    \"\"\")\n",
+    "    conn.commit()\n",
+    "    conn.close()\n",
+    "\n",
+    "def insert_data(db_name, data):\n",
+    "    conn = connect(db_name)\n",
+    "    cursor = conn.cursor()\n",
+    "    try:\n",
+    "        cursor = conn.cursor()\n",
+    "        for entry in data:\n",
+    "            cursor.execute(\"\"\" \n",
+    "                INSERT OR REPLACE INTO ranked_players (\n",
+    "                    league_id, queue_type, tier, rank, summoner_id, puuid,\n",
+    "                    league_points, wins, losses, veteran, inactive,\n",
+    "                    fresh_blood, hot_streak\n",
+    "                ) VALUES (?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?, ?)\n",
+    "            \"\"\", \n",
+    "            (\n",
+    "                entry.get(\"leagueId\"),\n",
+    "                entry.get(\"queueType\"),\n",
+    "                entry.get(\"tier\"),\n",
+    "                entry.get(\"rank\"),\n",
+    "                entry.get(\"summonerId\"),\n",
+    "                entry.get(\"puuid\"),\n",
+    "                entry.get(\"leaguePoints\"),\n",
+    "                entry.get(\"wins\"),\n",
+    "                entry.get(\"losses\"),\n",
+    "                entry.get(\"veteran\"),\n",
+    "                entry.get(\"inactive\"),\n",
+    "                entry.get(\"freshBlood\"),\n",
+    "                entry.get(\"hotStreak\")\n",
+    "            ))\n",
+    "        conn.commit()\n",
+    "    finally:\n",
+    "        conn.close()\n",
+    "\n",
+    "def fetch_and_store_data(api_key, db_name,tier, division, page):\n",
+    "    response = request(\n",
+    "        method=\"GET\",\n",
+    "        url=f\"https://{REGION}.api.riotgames.com/lol/league/v4/entries/{QUEUE}/{tier}/{division}?page={page}&api_key={api_key}\",\n",
+    "        headers={\n",
+    "            \"Accept\": \"application/json\",\n",
+    "            \"Content-Type\": \"application/json\",\n",
+    "        },\n",
+    "    ) \n",
+    "\n",
+    "    if response.status_code == 200:\n",
+    "        data = response.json()\n",
+    "        insert_data(db_name, data)\n",
+    "    else:\n",
+    "        print(f\"Error: {response.status_code}\")\n",
+    "        print(response.text)\n",
+    "        # Handle the error as needed\n",
+    "\n",
+    "    return len(data)\n",
+    "\n",
+    "def fetch_and_store_division(tier, division, page=\"1\"):\n",
+    "    last_time = time()\n",
+    "    while fetch_and_store_data(API_KEY, \"ranked_players.db\", tier, division, page) > 0:\n",
+    "        page = str(int(page) + 1)\n",
+    "\n",
+    "        # To avoid hitting the API rate limit, we will sleep for the rest of the time available in the 1.2 second window\n",
+    "        sleep_duration = 1.21 - (time() - last_time)\n",
+    "        if sleep_duration > 0:\n",
+    "            sleep(sleep_duration)\n",
+    "        last_time = time()\n",
+    "    \n",
+    "    print(f\"All data for {tier} {division} fetched and stored in the database.\")\n",
+    "\n",
+    "\n",
+    "def fetch_and_store_all_divisions(tier, division=\"I\", page=\"1\"):\n",
+    "    divisions = [\"I\", \"II\", \"III\", \"IV\"]\n",
+    "    start = divisions.index(division)\n",
+    "    for division in divisions[start:]:\n",
+    "        print(f\"Fetching data for {tier} {division}...\")\n",
+    "        fetch_and_store_division(tier, division, page=page)\n",
+    "\n",
+    "def fetch_and_store_all_tiers(tier=\"DIAMOND\", division=\"I\", page=\"1\"):\n",
+    "    # We are excluding MASTER, GRANDMASTER and CHALLENGER tiers as they are apex tiers and have a very small number of players\n",
+    "    # same case for IRON and UNRANKED tiers\n",
+    "    \n",
+    "    tiers = [\"BRONZE\", \"SILVER\", \"GOLD\", \"PLATINUM\", \"EMERALD\", \"DIAMOND\"]\n",
+    "    tiers = [\"DIAMOND\", \"EMERALD\", \"PLATINUM\", \"GOLD\", \"SILVER\", \"BRONZE\"]\n",
+    "    start = tiers.index(tier)\n",
+    "    for tier in tiers[start:]:\n",
+    "        print(f\"Fetching data for {tier}...\")\n",
+    "        fetch_and_store_all_divisions(tier, division=division, page=page)\n",
+    "        division = \"I\"  # Reset division to I for the next tier\n",
+    "\n",
+    "def get_last_entry(db_name):\n",
+    "    conn = connect(db_name)\n",
+    "    cursor = conn.cursor()\n",
+    "    cursor.execute(\"SELECT * FROM ranked_players ORDER BY ROWID DESC LIMIT 1\")\n",
+    "    last_entry = cursor.fetchone()\n",
+    "    conn.close()\n",
+    "    return last_entry\n",
+    "\n",
+    "def get_last_entry_page(db_name, tier, division):\n",
+    "    # Since there is at most 205 entries per page, we can use this to get the last page number\n",
+    "    # We will refecth the data from the last page to get the latest data and avoid missing any entries\n",
+    "    conn = connect(db_name)\n",
+    "    cursor = conn.cursor()\n",
+    "    cursor.execute(\"SELECT COUNT(*) FROM ranked_players WHERE tier = ? AND rank = ?\", (tier, division))\n",
+    "    count = cursor.fetchone()[0]\n",
+    "    conn.close()\n",
+    "    return count // 205 + 1\n",
+    "\n",
+    "\n",
+    "API_KEY = os.getenv(\"RIOT_API_KEY\")\n",
+    "TIER = \"DIAMOND\"                    \n",
+    "DIVISION = \"I\"                      \n",
+    "PAGE = \"1\"\n",
+    "REGION = \"euw1\"\n",
+    "QUEUE = \"RANKED_SOLO_5x5\"\n",
+    "\n",
+    "\n",
+    "if __name__ == \"__main__\":\n",
+    "    create_table(\"ranked_players.db\")\n",
+    "\n",
+    "    last_entry = get_last_entry(\"ranked_players.db\")\n",
+    "    if last_entry:\n",
+    "        print(f\"Last entry in the database: {json.dumps(last_entry, indent=4)}\")\n",
+    "        print(f\"Fetching data starting from tier : {last_entry[2]} and division : {last_entry[3]}...\")\n",
+    "        TIER = last_entry[2]\n",
+    "        DIVISION = last_entry[3]\n",
+    "\n",
+    "        PAGE = get_last_entry_page(\"ranked_players.db\", TIER, DIVISION)\n",
+    "        print(f\"Last entry page: {PAGE}\")\n",
+    "    else:\n",
+    "        print(\"No entries found in the database.\")\n",
+    "\n",
+    "\n",
+    "    fetch_and_store_all_tiers(TIER, DIVISION, PAGE)\n",
+    "    \n",
+    "    print(\"All data fetched and stored in the database.\")"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -117,7 +364,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.12.1"
   }
  },
  "nbformat": 4,
