day two rank distribution work

--- a/notebooks/data_collection.ipynb
+++ b/notebooks/data_collection.ipynb
@@ -122,49 +122,7 @@
    "execution_count": null,
    "id": "3b526c3c",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Last entry in the database: [\n",
-      "    \"8a7e1ee7-df8d-43bb-a33e-22e90e537c81\",\n",
-      "    \"RANKED_SOLO_5x5\",\n",
-      "    \"PLATINUM\",\n",
-      "    \"IV\",\n",
-      "    \"8V_lGPPNyb0dvcbetWldSf9pXpljEAMZ4DzffRq695HfSgl-9LUTVyCl7Q\",\n",
-      "    \"ddqvWjgKrKuPOmGeLJsNGUA7PSAvxUDpVF9kVPqHkmXSpqcWpG_DcI5dl4djY6Jh_Zbcv8Gbnv7xxg\",\n",
-      "    47,\n",
-      "    59,\n",
-      "    58,\n",
-      "    \"0\",\n",
-      "    \"0\",\n",
-      "    \"0\",\n",
-      "    \"0\"\n",
-      "]\n",
-      "Fetching data starting from tier : PLATINUM and division : IV...\n",
-      "Last entry page: 239\n",
-      "Fetching data for PLATINUM...\n",
-      "Fetching data for PLATINUM IV...\n",
-      "All data for PLATINUM IV fetched and stored in the database.\n",
-      "Fetching data for GOLD...\n",
-      "Fetching data for GOLD I...\n",
-      "All data for GOLD I fetched and stored in the database.\n",
-      "Fetching data for GOLD II...\n",
-      "All data for GOLD II fetched and stored in the database.\n",
-      "Fetching data for GOLD III...\n",
-      "All data for GOLD III fetched and stored in the database.\n",
-      "Fetching data for GOLD IV...\n",
-      "All data for GOLD IV fetched and stored in the database.\n",
-      "Fetching data for SILVER...\n",
-      "Fetching data for SILVER I...\n",
-      "All data for SILVER I fetched and stored in the database.\n",
-      "Fetching data for SILVER II...\n",
-      "All data for SILVER II fetched and stored in the database.\n",
-      "Fetching data for SILVER III...\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sqlite3 import connect\n",
     "from time import sleep, time\n",
@@ -191,8 +149,8 @@
     "    \"hotStreak\": \"false\"\n",
     "},\n",
     "\n",
-    "def create_table(db_name):\n",
-    "    conn = connect(db_name)\n",
+    "def create_table(db_path):\n",
+    "    conn = connect(db_path)\n",
     "    cursor = conn.cursor()\n",
     "    cursor.execute(\"\"\"\n",
     "        CREATE TABLE IF NOT EXISTS ranked_players (\n",
@@ -214,8 +172,8 @@
     "    conn.commit()\n",
     "    conn.close()\n",
     "\n",
-    "def insert_data(db_name, data):\n",
-    "    conn = connect(db_name)\n",
+    "def insert_data(db_path, data):\n",
+    "    conn = connect(db_path)\n",
     "    cursor = conn.cursor()\n",
     "    try:\n",
     "        cursor = conn.cursor()\n",
@@ -246,7 +204,7 @@
     "    finally:\n",
     "        conn.close()\n",
     "\n",
-    "def fetch_and_store_data(api_key, db_name,tier, division, page):\n",
+    "def fetch_and_store_data(api_key, db_path,tier, division, page):\n",
     "    response = request(\n",
     "        method=\"GET\",\n",
     "        url=f\"https://{REGION}.api.riotgames.com/lol/league/v4/entries/{QUEUE}/{tier}/{division}?page={page}&api_key={api_key}\",\n",
@@ -258,7 +216,7 @@
     "\n",
     "    if response.status_code == 200:\n",
     "        data = response.json()\n",
-    "        insert_data(db_name, data)\n",
+    "        insert_data(db_path, data)\n",
     "    else:\n",
     "        print(f\"Error: {response.status_code}\")\n",
     "        print(response.text)\n",
@@ -268,7 +226,7 @@
     "\n",
     "def fetch_and_store_division(tier, division, page=\"1\"):\n",
     "    last_time = time()\n",
-    "    while fetch_and_store_data(API_KEY, \"ranked_players.db\", tier, division, page) > 0:\n",
+    "    while fetch_and_store_data(API_KEY, db_path, tier, division, page) > 0:\n",
     "        page = str(int(page) + 1)\n",
     "\n",
     "        # To avoid hitting the API rate limit, we will sleep for the rest of the time available in the 1.2 second window\n",
@@ -291,26 +249,25 @@
     "    # We are excluding MASTER, GRANDMASTER and CHALLENGER tiers as they are apex tiers and have a very small number of players\n",
     "    # same case for IRON and UNRANKED tiers\n",
     "    \n",
-    "    tiers = [\"BRONZE\", \"SILVER\", \"GOLD\", \"PLATINUM\", \"EMERALD\", \"DIAMOND\"]\n",
-    "    tiers = [\"DIAMOND\", \"EMERALD\", \"PLATINUM\", \"GOLD\", \"SILVER\", \"BRONZE\"]\n",
+    "    tiers = [\"DIAMOND\", \"EMERALD\", \"PLATINUM\", \"GOLD\", \"SILVER\", \"BRONZE\", \"IRON\"]\n",
     "    start = tiers.index(tier)\n",
     "    for tier in tiers[start:]:\n",
     "        print(f\"Fetching data for {tier}...\")\n",
     "        fetch_and_store_all_divisions(tier, division=division, page=page)\n",
     "        division = \"I\"  # Reset division to I for the next tier\n",
     "\n",
-    "def get_last_entry(db_name):\n",
-    "    conn = connect(db_name)\n",
+    "def get_last_entry(db_path):\n",
+    "    conn = connect(db_path)\n",
     "    cursor = conn.cursor()\n",
     "    cursor.execute(\"SELECT * FROM ranked_players ORDER BY ROWID DESC LIMIT 1\")\n",
     "    last_entry = cursor.fetchone()\n",
     "    conn.close()\n",
     "    return last_entry\n",
     "\n",
-    "def get_last_entry_page(db_name, tier, division):\n",
+    "def get_last_entry_page(db_path, tier, division):\n",
     "    # Since there is at most 205 entries per page, we can use this to get the last page number\n",
     "    # We will refecth the data from the last page to get the latest data and avoid missing any entries\n",
-    "    conn = connect(db_name)\n",
+    "    conn = connect(db_path)\n",
     "    cursor = conn.cursor()\n",
     "    cursor.execute(\"SELECT COUNT(*) FROM ranked_players WHERE tier = ? AND rank = ?\", (tier, division))\n",
     "    count = cursor.fetchone()[0]\n",
@@ -327,16 +284,17 @@
     "\n",
     "\n",
     "if __name__ == \"__main__\":\n",
-    "    create_table(\"ranked_players.db\")\n",
+    "    db_path = \"../data/ranked_players.db\"\n",
+    "    create_table(db_path)\n",
     "\n",
-    "    last_entry = get_last_entry(\"ranked_players.db\")\n",
+    "    last_entry = get_last_entry(db_path)\n",
     "    if last_entry:\n",
     "        print(f\"Last entry in the database: {json.dumps(last_entry, indent=4)}\")\n",
     "        print(f\"Fetching data starting from tier : {last_entry[2]} and division : {last_entry[3]}...\")\n",
     "        TIER = last_entry[2]\n",
     "        DIVISION = last_entry[3]\n",
     "\n",
-    "        PAGE = get_last_entry_page(\"ranked_players.db\", TIER, DIVISION)\n",
+    "        PAGE = get_last_entry_page(db_path, TIER, DIVISION)\n",
     "        print(f\"Last entry page: {PAGE}\")\n",
     "    else:\n",
     "        print(\"No entries found in the database.\")\n",
