--- a/notebooks/data_collection.ipynb
+++ b/notebooks/data_collection.ipynb
@@ -304,6 +304,49 @@
     "    \n",
     "    print(\"All data fetched and stored in the database.\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b152b9dd",
+   "metadata": {},
+   "source": [
+    "# Collecting ranked matches\n",
+    "\n",
+    "Now that we have access to a list of players we can start collecting ranked matches, we couldn't do it earlier because of the api design. I couldnt find any \"list of matches\" endpoint only based on players. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "390accc6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sqlite3 import connect\n",
+    "from time import sleep, time\n",
+    "from requests import request\n",
+    "import json\n",
+    "import os\n",
+    "\n",
+    "ranked_players_db_path = \"../data/ranked_players.db\"\n",
+    "API_KEY = os.getenv(\"RIOT_API_KEY\")\n",
+    "REGION = \"euw1\"\n",
+    "\n",
+    "url_example = f\"https://europe.api.riotgames.com/lol/match/v5/matches/by-puuid/iE-VLPKxBxIALe5-17JYEvjOcPN_3UrAsMkLKcPugoNgW_utyd7J03fUn-l5e1c3hUFECqzUV4-VfA/ids?type=ranked&start=0&count=100&api_key=RGAPI-1a709e75-14cb-4c78-a758-bdc36804c412\"\n",
+    "\n",
+    "# Creating the db and table to store the matches IDs\n",
+    "def create_matches_table(db_path):\n",
+    "    conn = connect(db_path)\n",
+    "    cursor = conn.cursor()\n",
+    "    cursor.execute(\"\"\"\n",
+    "        CREATE TABLE IF NOT EXISTS matches (\n",
+    "            match_id TEXT PRIMARY KEY,\n",
+    "        )\n",
+    "    \"\"\")\n",
+    "    conn.commit()\n",
+    "    conn.close()\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
